--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.9.1",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
